fixes for valign search button

--- a/web/web_client/components/top-menu/top-menu.less
+++ b/web/web_client/components/top-menu/top-menu.less
@@ -120,9 +120,13 @@
       font-size: 16px;
       width: 32px;
       height: 30px;
+      line-height: 16px;
+      outline: none;
+      text-align: center;
       img {
-        width: 17px;
+        width: 14px;
         height: 16px;
+        display: inline-block;
       }
     }
 
